* Requests to http://<producthostname>.<rbuilderdomainname>/ now properly
  redirect to the product homepage even when the product is marked as
  private (RBL-3148).
* Private products now produce private EC2 Images. (RBL-3477)
* rMake log files are now collected by the collection tool (RBL-3859)
* The rPath Management Console goes over https now, not http. (RBL-3871)

Web Front End Changes
---------------------
* Product Version is now set as a view on the Product, affecting all pages that
  interact with the product version (RBL-3163)
* Fixed a bug where the cook group page mistakenly referenced the "Images" 
  link instead of the "Manage Images" link. (RBL-3014)
* There is now a link on the account settings page to edit a user's EC2
  settings. (RBL-3029)
* There is now a link on the account settings page to clear a user's EC2 
  settings. (RBL-3045)
* There is now a checkbox on the "Create Product" page to create private
  products. (RBL-3080)
* The "Administrative Options" area of the product hompegae has been removed.
  (RBL-3080)
* There is now a checkbox on the "Edit Product Settings" page to convert
  a private product to a public product.  Note that a public product cannot
  be converted to a private product. (RBL-3080)
* Fixed a bug where creating a public product or making a private product
  public resulted in a JavaScript error on IE 6/7. (RBL-3094)
* Fixed a bug where creating a public product or making a private product
  public resulted in a JavaScript error on FF3.  This was caused by RBL-3094.
  (RBL-3100)
* Admin users are now allowed to convert public projects to private.
  (RBL-3095)
* There was a conceptual disconnect between the role "User" and "Watching" a
  product.  This has been changed so that users now "register for" and "use"
  products. (RBL-2972)
* EC2 credentials will now be stripped of whitespace. (RBL-3119)
* Fixed a bug where the arrows indicating required fields were not present