@@ -76,6 +76,9 @@ usermod -a -G apache raa-web
 # Create a project for rMake to use as a repository.
 sudo -u apache /usr/share/rbuilder/scripts/rmake-setup
 
+# Set up external repositories for the platforms we support
+sudo -u apache /usr/share/rbuilder/scripts/init-extproducts
+
 # Start apache again (if it was running before)
 if [ $START_APACHE -eq 1 ]
 then
