@@ -14,9 +14,11 @@ authPass                  mintpass
 authUser                  mintauth
 # Available platforms (these are officially supported)
 # XXX these need to be changed to a "product" platform (rLS) before v5 goes out
-availablePlatforms      conary.rpath.com@rpl:2
-availablePlatforms      ubuntu.rpath.com@rpath:ubuntu-hardy
+availablePlatforms      rap.rpath.com@rpath:linux-2
 availablePlatforms      sle.rpath.com@rpath:sles-10
+availablePlatforms      centos.rpath.com@rpath:centos-5
+availablePlatforms      conary.rpath.com@rpl:2
+availablePlatforms      rap.rpath.com@rpath:linux-1
 
 # Acceptable platforms (these are *allowed* but cannot be normally chosen)
 # XXX these need to be changed to a "product" platform (rLS) before v5 goes out
